--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ img {
 
 button {
     cursor: pointer;
+    border: none;
 }
 
 body {
@@ -138,7 +139,7 @@ body {
 
 .hero-btn {
     font-family: Roboto;
-    background-color: #2F303A;
+    background-color: #2196F3;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -208,7 +209,6 @@ body {
 /*---------------------ABOUT--------------------- */
 
 .about {
-    background-color: #E5E5E5;
     padding-bottom: 94px;
 }
 .about-list {
@@ -240,6 +240,11 @@ body {
 }
 .team-list-item:not(:last-child) {
     margin-right: 30px;
+}
+.team-list-item {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-item {
@@ -319,7 +324,7 @@ body {
 }
 .portfolio-filter {
     display: flex;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
 }
 
 .list-btn:not(:last-child) {
@@ -360,6 +365,7 @@ body {
     color: var(--main-title-color);
     margin-top: 20px;
     margin-bottom: 4px;
+    padding-left: 24px;
 }
 
 .projects-title {
@@ -368,6 +374,7 @@ body {
     letter-spacing: 0.03em;
     color: var(--main-text-color);
     margin-bottom: 20px;
+    padding-left: 24px;
 }
 
 .projects {
@@ -375,11 +382,12 @@ body {
     padding-bottom: 94px;
     flex-wrap: wrap;
     margin: -15px;
-    border-bottom: 1px solid #EEEEEE;
+    
 }
 
 .progects-icon {
     flex-basis: calc(100% / 3 - 30px);
-    margin: 15px;    
+    margin: 15px;
+    border: 1px solid #EEEEEE; 
 }
 
