--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,7 @@ body {
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
+    padding-bottom: 30px;
 }
 
 /*---------------------FOOTER--------------------- */
